fixed icons on mobile

--- a/styles/one.css
+++ b/styles/one.css
@@ -118,11 +118,11 @@ section.one h1 {
         box-shadow: 0 8px 30px 0 rgba(0, 0, 0, 0.3);
         background-color: var(--col-dark-blue);
         animation: border-transform 7s linear infinite;
-        transition: top 350ms 1100ms cubic-bezier(0.23, 1, 0.32, 1),
-            right 350ms 1100ms cubic-bezier(0.23, 1, 0.32, 1),
+        transition: top 35ms 1100ms cubic-bezier(0.23, 1, 0.32, 1),
+            right 35ms 1100ms cubic-bezier(0.23, 1, 0.32, 1),
             transform 250ms 1100ms ease,
-            width 650ms 400ms cubic-bezier(0.23, 1, 0.32, 1),
-            height 650ms 400ms cubic-bezier(0.23, 1, 0.32, 1);
+            width 65ms 400ms cubic-bezier(0.23, 1, 0.32, 1),
+            height 65ms 400ms cubic-bezier(0.23, 1, 0.32, 1);
     }
 
     @keyframes border-transform {
@@ -290,7 +290,7 @@ section.one h1 {
 
     i.fa-brands {
         width: fit-content;
-        font-size: var(--size-2xl);
+        font-size: var(--size-3xl);
 
     }
 
